force-app/main/default/objects/bofc__BOFCOBDetails__c/fields/bofc__allowInChatterGroups__c.field-meta.xml
<CustomField>
    <fullName>bofc__allowInChatterGroups__c</fullName>
    <defaultValue>false</defaultValue>
    <label>allowInChatterGroups</label>
    <type>Checkbox</type>
</CustomField>