force-app/main/default/objects/bofc__BOFCOBDetails__c/fields/bofc__CustomSettingsType__c.field-meta.xml
<CustomField>
    <fullName>bofc__CustomSettingsType__c</fullName>
    <label>CustomSettingsType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>