force-app/main/default/objects/bofc__BOFCOBDetails__c/fields/bofc__CustomSettingsVisibility__c.field-meta.xml
<CustomField>
    <fullName>bofc__CustomSettingsVisibility__c</fullName>
    <label>CustomSettingsVisibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>