force-app/main/default/objects/bofc__BOFCOBDetails__c/fields/bofc__deploymentStatus__c.field-meta.xml
<CustomField>
    <fullName>bofc__deploymentStatus__c</fullName>
    <label>deploymentStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>