force-app/main/default/objects/bofc__BOFCOBDetails__c/fields/bofc__Display_Custom_Fields__c.field-meta.xml
<CustomField>
    <fullName>bofc__Display_Custom_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Custom Fields</label>
    <type>Checkbox</type>
</CustomField>