force-app/main/default/objects/bofc__BOFCOBDetails__c/fields/bofc__enableActivities__c.field-meta.xml
<CustomField>
    <fullName>bofc__enableActivities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>enableActivities</label>
    <type>Checkbox</type>
</CustomField>