force-app/main/default/objects/bofc__BOFCOBDetails__c/fields/bofc__enableBulkApi__c.field-meta.xml
<CustomField>
    <fullName>bofc__enableBulkApi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>enableBulkApi</label>
    <type>Checkbox</type>
</CustomField>