force-app/main/default/objects/bofc__BOFCOBDetails__c/fields/bofc__enableFeeds__c.field-meta.xml
<CustomField>
    <fullName>bofc__enableFeeds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>enableFeeds</label>
    <type>Checkbox</type>
</CustomField>