force-app/main/default/objects/bofc__BOFCOBDetails__c/fields/bofc__enableHistory__c.field-meta.xml
<CustomField>
    <fullName>bofc__enableHistory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>enableHistory</label>
    <type>Checkbox</type>
</CustomField>