force-app/main/default/objects/bofc__BOFCOBDetails__c/fields/bofc__enableReports__c.field-meta.xml
<CustomField>
    <fullName>bofc__enableReports__c</fullName>
    <defaultValue>false</defaultValue>
    <label>enableReports</label>
    <type>Checkbox</type>
</CustomField>