force-app/main/default/objects/bofc__BOFCOBDetails__c/fields/bofc__enableSearch__c.field-meta.xml
<CustomField>
    <fullName>bofc__enableSearch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>enableSearch</label>
    <type>Checkbox</type>
</CustomField>