force-app/main/default/objects/bofc__BOFCOBDetails__c/fields/bofc__enableSharing__c.field-meta.xml
<CustomField>
    <fullName>bofc__enableSharing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>enableSharing</label>
    <type>Checkbox</type>
</CustomField>