force-app/main/default/objects/bofc__BOFCOBDetails__c/fields/bofc__enableStreamingApi__c.field-meta.xml
<CustomField>
    <fullName>bofc__enableStreamingApi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>enableStreamingApi</label>
    <type>Checkbox</type>
</CustomField>