force-app/main/default/objects/bofc__BOFCOBDetails__c/fields/bofc__Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>bofc__Last_Modified_By__c</fullName>
    <label>Last Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>