force-app/main/default/objects/bofc__BOFCOBDetails__c/fields/bofc__ObjectID__c.field-meta.xml
<CustomField>
    <fullName>bofc__ObjectID__c</fullName>
    <label>ObjectID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>