force-app/main/default/objects/bofc__BOFCOBDetails__c/fields/bofc__Only_FLS__c.field-meta.xml
<CustomField>
    <fullName>bofc__Only_FLS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only FLS</label>
    <type>Checkbox</type>
</CustomField>