force-app/main/default/objects/bofc__BOFCOBDetails__c/fields/bofc__recordTypeTrackHistory__c.field-meta.xml
<CustomField>
    <fullName>bofc__recordTypeTrackHistory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>recordTypeTrackHistory</label>
    <type>Checkbox</type>
</CustomField>