force-app/main/default/objects/bofc__BOFCOBDetails__c/fields/bofc__Show_RT__c.field-meta.xml
<CustomField>
    <fullName>bofc__Show_RT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show RT</label>
    <type>Checkbox</type>
</CustomField>