force-app/main/default/objects/bofc__BOFCOBDetails__c/fields/bofc__Show_SF__c.field-meta.xml
<CustomField>
    <fullName>bofc__Show_SF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show SF</label>
    <type>Checkbox</type>
</CustomField>