force-app/main/default/objects/bofc__BOFCOBDetails__c/fields/bofc__Visibility__c.field-meta.xml
<CustomField>
    <fullName>bofc__Visibility__c</fullName>
    <label>Visibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>